fixes card sizing on mobile devices

--- a/style-guide/source/css/components/_card.scss
+++ b/style-guide/source/css/components/_card.scss
@@ -123,7 +123,7 @@
 // ----------------------
 @media (max-width: $break-default){
   .card{
-    width: 100%;
+    width: calc(100% - 54px);
     &.grid__columns > *{
       margin: $unit-2 0;
     }
